# openfyxer

./: .env.example  .gitignore  ARCHITECTURE.md  FILE_LIST.md  LICENSE  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  audit.py  auth.py  calendar.py  chat.py  drafts.py  emails.py  integrations_google.py  meetings.py  rag.py  settings.py  users.py
backend/app/core/: __init__.py  config.py  encryption.py  exceptions.py  security.py
backend/app/db/: __init__.py  base.py  session.py  types.py
backend/app/models/: __init__.py  audit_log.py  calendar_event.py  document.py  draft.py  email.py  email_account.py  meeting.py  user.py  user_settings.py
backend/app/schemas/: __init__.py  audit.py  calendar.py  chat.py  draft.py  email.py  meeting.py  rag.py  settings.py  user.py
backend/app/services/: __init__.py  calendar_service.py  email_service.py  llm_service.py  notification_service.py  rag_service.py  transcription_service.py
backend/app/workers/: __init__.py  celery_app.py
backend/app/workers/tasks/: __init__.py  email_tasks.py  notification_tasks.py  rag_tasks.py  transcription_tasks.py
backend/tests/: __init__.py  conftest.py
backend/tests/benchmarks/: test_performance.py
backend/tests/integration/: test_api_endpoints.py  test_calendar_flow.py  test_email_flow.py  test_meeting_flow.py
backend/tests/unit/: test_email_classification.py  test_prompt_generation.py  test_rag_integration.py  test_security.py
docs/: CONTRIBUTING.md  USER_GUIDE.md  performance.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/services/: api.test.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: AuditPage.tsx  CalendarPage.tsx  ChatPage.tsx  DashboardPage.tsx  DraftsPage.tsx  InboxPage.tsx  KnowledgeBasePage.tsx  LoginPage.tsx  MeetingsPage.tsx  RegisterPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts  auditService.ts  authService.ts  calendarService.ts  chatService.ts  emailService.ts  googleService.ts  meetingService.ts  ragService.ts  settingsService.ts
frontend/src/store/: authStore.ts  settingsStore.ts
ollama/: Dockerfile  entrypoint.sh
scripts/: healthcheck.sh  init_demo.py
(+8 files in other folders)
